# PI_AI-Driven_Networks

./: .gitignore  README.md  output2.json  test.py
ndap/: .gitignore  README.md  best_classifier_model.pkl  best_model.pkl  dashboards.json  docker-compose.yaml  docker-compose.yml  pyproject.toml  requirements.txt
ndap/catboost_info/: learn_error.tsv  time_left.tsv
ndap/catboost_info/learn/: events.out.tfevents
ndap/src/ndap/NRF_API/: Dockerfile  nrf.py
ndap/src/ndap/dashboard_interface/: Dockerfile  README.md  cronograf.py  data_consumer_api.py  data_consumer_middleware.py
ndap/src/ndap/data_prcessor/: data_processor.py
ndap/src/ndap/data_processor/: Dockerfile  data_processor.py  data_processor_consumer.py  extracted.flows  extractedInitial.flows
ndap/src/ndap/data_producer/: Dockerfile  callback_worker.py  data_producer.py  nwdaf_collector.py
ndap/src/ndap/data_receiver/: Dockerfile  README.md  data_receiver.py  data_receiver_api.py
ndap/src/ndap/data_relay/: Dockerfile  README.md  data_relay.py  data_relay_api.py
ndap/src/ndap/data_storage/: Dockerfile.dbraw  Dockerfile.extractor  Dockerfile.storage_middleware  README.md  clean_influx.py  clickhouse_consumer.py  data_storage_middleware.py  dbs_middleware.py  docker-compose.yaml  dockerfile  ground_truth_insert.py  influx_point_to_json.py  init_clickhouse.sql  json_packets_to_pcap.py  raw_data_extractor.py  raw_data_storer.py  test_kafka_producer.py  testing_click.py
ndap/src/ndap/middleware/: docker-compose.yml
ndap/src/ndap/ml_inference/: Dockerfile  README.md  ml_inference.py  predictions.csv  (+3 more)
(+26 files in other folders)
