[project]
name = "ndap"
version = "0.1.0"
description = ""
authors = [
    {name = "odraude23",email = "eduardolplopes@ua.pt"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)"
]

[tool.poetry]
packages = [{include = "ndap", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
